# pgformatter

./: .gitmodules  .pre-commit-hooks.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pgformatter/: __init__.py  cli.py  pg_format.py
tests/: test_pgformatter.py
