[tool.poetry]
name = "pgformatter"
version = "5.5"
description = "Thin Python wrapper for pgFormatter"
authors = [
    "Nathan Cahill <nathan@nathancahill.com>",
    "Chad Norvell <chad@constructural.ai>"
]
include = ["perl/**/*"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
