[tool.poetry]
name = "pgformatter"
version = "5.5"
description = "Thin Python wrapper for pgFormatter"
authors = [
    "Nathan Cahill <nathan@nathancahill.com>",
    "Chad Norvell <chad@constructural.ai>"
]
include = ["perl/**/*"]

[tool.poetry.scripts]
pg_format = "pgformatter.cli:main"

[tool.poetry.dependencies]
colorama = "^0.4.6"
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
